--- a/LacertaEngineEditor/imgui.ini
+++ b/LacertaEngineEditor/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][FrameRate]
-Pos=1307,19
-Size=593,57
+Pos=1417,78
+Size=387,57
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
 Pos=553,146
@@ -32,7 +31,6 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1900,989
 Collapsed=0
 
@@ -61,7 +59,7 @@ DockId=0x00000001,0
 Pos=1307,78
 Size=593,298
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000005,0
 
 [Window][Details]
 Pos=1307,644
@@ -76,15 +74,13 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
-  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=1305,978 CentralNode=1 Selected=0x13926F0B
-  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=593,978 Split=Y Selected=0xFB7927A1
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=419,357 Split=Y Selected=0x97059648
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Split=Y Selected=0x2AFBC908
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=369,57 Selected=0x2AFBC908
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=369,298 Selected=0xECBEECBF
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=419,116 Selected=0x97059648
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=419,611 Split=Y Selected=0xFB7927A1
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=369,264 Selected=0xFB7927A1
-      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=369,345 Selected=0xFC3EA205
+DockSpace       ID=0x3BC79352 Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1305,978 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=593,978 Split=Y Selected=0xFB7927A1
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=419,357 Split=Y Selected=0x97059648
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Selected=0x2AFBC908
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=419,116 Selected=0x97059648
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=419,611 Split=Y Selected=0xFB7927A1
+      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=369,264 Selected=0xFB7927A1
+      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=369,345 Selected=0xFC3EA205
 
