--- a/LacertaEngineEditor/LacertaEngineEditor.vcxproj
+++ b/LacertaEngineEditor/LacertaEngineEditor.vcxproj
@@ -63,6 +63,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -81,6 +82,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -92,6 +94,7 @@
     <ClCompile Include="EditorWindow\EditorWindow.cpp" />
     <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="ImGui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_dx12.cpp" />
     <ClCompile Include="ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="ImGui\imgui_src\imgui.cpp" />
     <ClCompile Include="ImGui\imgui_src\ImGuizmo.cpp">
@@ -184,6 +187,7 @@
   <ItemGroup>
     <ClInclude Include="EditorWindow\EditorWindow.h" />
     <ClInclude Include="ImGui\imgui_impl_dx11.h" />
+    <ClInclude Include="ImGui\imgui_impl_dx12.h" />
     <ClInclude Include="ImGui\imgui_impl_win32.h" />
     <ClInclude Include="ImGui\imgui_src\imconfig.h" />
     <ClInclude Include="ImGui\imgui_src\imgui.h" />
