D3D12 support wip : refactoring stuff

--- a/LacertaEngineEditor/imgui.ini
+++ b/LacertaEngineEditor/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][FrameRate]
-Pos=1417,78
+Pos=1315,78
 Size=387,57
 Collapsed=0
 
@@ -56,8 +56,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Global Settings]
-Pos=1307,78
-Size=593,298
+Pos=1307,19
+Size=593,357
 Collapsed=0
 DockId=0x00000005,0
 
@@ -78,7 +78,7 @@ DockSpace       ID=0x3BC79352 Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1305,978 CentralNode=1 Selected=0x13926F0B
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=593,978 Split=Y Selected=0xFB7927A1
     DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=419,357 Split=Y Selected=0x97059648
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Selected=0x2AFBC908
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Selected=0xECBEECBF
       DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=419,116 Selected=0x97059648
     DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=419,611 Split=Y Selected=0xFB7927A1
       DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=369,264 Selected=0xFB7927A1
