Disabling D3D12 for main branch

--- a/LacertaEngineEditor/imgui.ini
+++ b/LacertaEngineEditor/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][FrameRate]
-Pos=1290,129
+Pos=28,68
 Size=387,57
 Collapsed=0
 
@@ -25,12 +25,13 @@ Size=391,133
 Collapsed=0
 
 [Window][SceneHierarchy]
-Pos=1307,378
-Size=593,264
+Pos=1413,378
+Size=487,264
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1900,989
 Collapsed=0
 
@@ -51,19 +52,19 @@ DockId=0x00000001,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1900,970
+Size=1411,970
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Global Settings]
-Pos=1307,19
-Size=593,357
+Pos=1413,19
+Size=487,357
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Details]
-Pos=1307,644
-Size=593,345
+Pos=1413,644
+Size=487,345
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -74,9 +75,9 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1305,978 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=593,978 Split=Y Selected=0xFB7927A1
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1411,978 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=487,978 Split=Y Selected=0xFB7927A1
     DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=419,357 Split=Y Selected=0x97059648
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Selected=0xECBEECBF
       DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=419,116 Selected=0x97059648
